tried compiling bib correctly

--- a/00_main.tex
+++ b/00_main.tex
@@ -23,7 +23,7 @@
 
 \input{customcommands.tex} % Insert the customcommands.tex file which contains the custom made commands, functions, etc.
 
-\hypersetup{pdftitle={Titel},pdfauthor={Name}} % Fill out to include PDF metadata for the author and title of the book
+\hypersetup{pdftitle={Praxissemesterbericht},pdfauthor={Florian Ittensohn}} % Fill out to include PDF metadata for the author and title of the book
 \date{\today}
 
 		
@@ -51,22 +51,22 @@
 %	COPYRIGHT PAGE
 %----------------------------------------------------------------------------------------
 
-\newpage
-~\vfill
-\thispagestyle{empty}
+% \newpage
+% ~\vfill
+% \thispagestyle{empty}
 
-\noindent Copyright \copyright\ 2021 NAME \\ % Copyright notice
+% \noindent Copyright \copyright\ 2021 NAME \\ % Copyright notice
 
-\noindent \textsc{Published by NAME}\\ % Publisher
+% \noindent \textsc{Published by NAME}\\ % Publisher
 
-\noindent \textsc{book-website.com}\\ % URL
+% \noindent \textsc{book-website.com}\\ % URL
 
-\noindent
-Dieses Skript wird als Lehrmaterial für die Vorlesung XYZ an der Hochschule Karlsruhe verwendet.
-Das Skript wird unter der folgenden Lizenz veröffentlicht: CC BY-NC-SA 3.0 (http://creativecommons.org/licenses/by-nc-sa/3.0/). \\
-Das originale Template (the Legrand Orange Book Template) kann hier heruntergeladen werden: http://www.latextemplates.com/template/the-legrand-orange-book 
+% \noindent
+% Dieses Skript wird als Lehrmaterial für die Vorlesung XYZ an der Hochschule Karlsruhe verwendet.
+% Das Skript wird unter der folgenden Lizenz veröffentlicht: CC BY-NC-SA 3.0 (http://creativecommons.org/licenses/by-nc-sa/3.0/). \\
+% Das originale Template (the Legrand Orange Book Template) kann hier heruntergeladen werden: http://www.latextemplates.com/template/the-legrand-orange-book 
 
-\noindent \textit{First printing, Feb 2021} % Printing/edition date
+% \noindent \textit{First printing, Feb 2021} % Printing/edition date
 
 %----------------------------------------------------------------------------------------
 %	TABLE OF CONTENTS
@@ -80,7 +80,7 @@ Das originale Template (the Legrand Orange Book Template) kann hier heruntergela
 
 \tableofcontents % Print the table of contents itself
 
-\cleardoublepage % Forces the first chapter to start on an odd page so it's on the right side of the book
+% \cleardoublepage % Forces the first chapter to start on an odd page so it's on the right side of the book
 
 \pagestyle{fancy} % Enable headers and footers again
 
@@ -330,6 +330,7 @@ Referencing Figure \ref{fig:placeholder} in-text automatically.
 \section*{Articles}
 \addcontentsline{toc}{section}{Articles}
 \printbibliography[heading=bibempty,type=article]
+\printbibliography
 
 %------------------------------------------------
 
