--- a/01_einleitung.tex
+++ b/01_einleitung.tex
@@ -5,4 +5,19 @@
 %----------------------------------------------------------------------------------------
 \chapter{Einleitung}\index{chp\_Einleitung}
 %----------------------------------------------------------------------------------------
-Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc.
+Ein großes Problem der allgegenwärtigen Digitalisierung in allen Bereichen ist der Transport der Informationen von Ort A nach Ort B.
+Um dieses Problem zu lösen gibt es zahlreiche drahtgebundene und drahtlose Übertragungswege, wobei ich mich hier speziell für die drahtlose Übertragung interessiere.
+Aus diesem Grund habe ich mich für ein Praxissemester in der Entwicklung für Kommunikationsgeräte entschieden. \\
+
+In der Zeit vom 01.10.2022 bis einschließlich 31.03.2023 habe ich mein Praktikum bei der Siemens AG, Standort Karlsruhe Knielingen absolivert.
+Hier war ich in einer Abteilung tätig, welche die Firmware für Ethernet, Mobilfunk- und WLAN Endgeräte mit Fokus auf das industrielle Umfeld produziert. 
+
+Für das Praktikum habe ich mich entschieden, da es mich besonders gereizt bei einer Anwendung der Hochfrequenztechnik mitzuwirken und diesen Bereich näher kennen zu lernen.
+Außerdem wollte ich einen Einblick in die Softwareentwicklung und die verwendeten Prozesse in einem großen Unternehmen bekommen. 
+Besonders reizvoll ist hier auch das Zusammenspiel von physikalischen Beschränkungen, das Zusammenspiel der verschiedenen Komponenten im Gerät und die Erstellung von Lösungen für reale Probleme der Kunden und deren Anwendungsgebiete.
+Außerdem hat mich hier die geringe Latenzzeit und hohe Datenrate und vor allem die Ausfallsicherheit der verwendeten Geräte interessiert. \\
+
+Bei meinem Praktikum ergab sich für mich die Möglichkeit den Arbeitsalltag in einer Entwicklungsabteilung in einem Großkonzern kennenzulernen. Ich bekam spannende Einblicke in den Alltag in der Firmwareentwicklung und der damit verbunden Testautomatisierung und Validierung.
+
+
+Auf den nächsten Seiten werde ich ausführlich auf die Tätigkeiten innerhalb meines Praktikums eingehen.
