--- a/structure.tex
+++ b/structure.tex
@@ -50,7 +50,7 @@
 
 \usepackage{microtype} % Slightly tweak font spacing for aesthetics
 
-
+\usepackage{csquotes}
 
 %----------------------------------------------------------------------------------------
 %	BIBLIOGRAPHY AND INDEX
