--- a/07_Kalender.tex
+++ b/07_Kalender.tex
@@ -32,64 +32,64 @@
     &               &                                                       \\ \hline
 10  & 17.10.2022    & Statusrunde Team, Schreiben eines Testfalls                                                      \\ \hline   
 11  & 18.10.2022    & Statusrunde Test, Statusrunde Signalrecorder                                                      \\ \hline   
-12  & 19.10.2022    & Teamtag vor Ort, Umsetzen eines Integrationstests für                                                       \\ \hline   
+12  & 19.10.2022    & Teamtag vor Ort, Überabeiten eines Integrationstests TFTP                                                      \\ \hline   
 13  & 20.10.2022    & Statusrunde Team, Sales erklärt Kundenprojekte                                                      \\ \hline   
-14  & 21.10.2022    &                                                       \\ \hline  
+14  & 21.10.2022    & Testen der Rechercheergebnisse                                                      \\ \hline  
     &               &                                                       \\ \hline 
 15  & 24.10.2022    & Statusrunde Team, Testen der Rechercheergebnisse                                                   \\ \hline   
 16  & 25.10.2022    & Statusrunde Signalrecorder, Testen der Rechercheergebnisse                                                      \\ \hline   
-17  & 26.10.2022    &                                                       \\ \hline   
-18  & 27.10.2022    &                                                       \\ \hline   
-19  & 28.10.2022    &                                                       \\ \hline 
+17  & 26.10.2022    & Teamtag vor Ort, Einführung in Architekur des Projekts 1                                                      \\ \hline   
+18  & 27.10.2022    & DSL Gerät in Testanlage integriert                                                      \\ \hline   
+19  & 28.10.2022    & Testaufbau Wlan im Büro                                                      \\ \hline 
     &               &                                                       \\ \hline
-20  & 31.10.2022    &                                                       \\ \hline   
-21  & 02.11.2022    &                                                       \\ \hline   
-22  & 03.11.2022    &                                                       \\ \hline   
-23  & 04.11.2022    &                                                       \\ \hline 
+20  & 31.10.2022    & Bigfixing Integrationstest TFTP                                                      \\ \hline   
+21  & 02.11.2022    & Teamtag vor Ort, Einführung in Architekur des Projekts 2                                                        \\ \hline   
+22  & 03.11.2022    & Einrichten des Entwicklungssetups für Signalrecorder                                                      \\ \hline   
+23  & 04.11.2022    & Fehlersuche "Error Received -19"                                                      \\ \hline 
 &               &                                                       \\ \hline 
-24  & 07.11.2022    &                                                       \\ \hline   
-25  & 08.11.2022    &                                                       \\ \hline   
-26  & 09.11.2022    &                                                       \\ \hline   
-27  & 10.11.2022    &                                                       \\ \hline   
-28  & 11.11.2022    &                                                    \\ \hline  
+24  & 07.11.2022    & Aufbau und Verifikation des Buildsystems Webassembly auf Windows                                                      \\ \hline   
+25  & 08.11.2022    & Aufbau und Verifikation des Buildsystems Webassembly auf Linux                                                        \\ \hline   
+26  & 09.11.2022    & Einarbeitung in vorhandenen Programmcode                                                      \\ \hline   
+27  & 10.11.2022    &  Einarbeitung in vorhandenen Programmcode                                                       \\ \hline   
+28  & 11.11.2022    &  Einarbeitung in vorhandenen Programmcode                                                    \\ \hline  
 &               &                                                       \\ \hline 
-29  & 14.11.2022    &                                                       \\ \hline   
-30  & 15.11.2022    &                                                       \\ \hline   
-31  & 16.11.2022    &                                                       \\ \hline   
-32  & 17.11.2022    &                                                       \\ \hline   
-33  & 18.11.2022    &                                                       \\ \hline
+29  & 14.11.2022    & Anpassen des Javscript Codes                                                      \\ \hline   
+30  & 15.11.2022    & Proof of Concept vorstellen, C-Code --> Web und native  \\ \hline   
+31  & 16.11.2022    & Layout gestalten                                                      \\ \hline   
+32  & 17.11.2022    & Layout gestalten                                                      \\ \hline   
+33  & 18.11.2022    & Datenverarbeitung und Säuberung                                                      \\ \hline
 &               &                                                       \\ \hline 
-34  & 21.11.2022    &                                                       \\ \hline 
-35  & 22.11.2022    &                                                       \\ \hline   
-36  & 23.11.2022    &                                                       \\ \hline   
-37  & 24.11.2022    &                                                       \\ \hline   
-38  & 25.11.2022    &                                                       \\ \hline 
+34  & 21.11.2022    & Datenverarbeitung und Säuberung                                                      \\ \hline 
+35  & 22.11.2022    & TFTP Server einrichten und Buildumgebung neu aufsetzen                                                      \\ \hline   
+36  & 23.11.2022    & Einarbeiten in SDL                                                      \\ \hline   
+37  & 24.11.2022    & Einarbeiten in SDL                                                      \\ \hline   
+38  & 25.11.2022    & Erster Test auf dem Gerät, anzeige von einfachen Daten geht                                                      \\ \hline 
 &               &                                                       \\ \hline   
-39  & 28.11.2022    &                                                       \\ \hline   
-40  & 29.11.2022    &                                                       \\ \hline   
-41  & 30.11.2022    &                                                       \\ \hline   
-42  & 01.12.2022    &                                                       \\ \hline   
-43  & 02.12.2022    &                                                       \\ \hline  
+39  & 28.11.2022    &  Windowsupdate und beheben von Treiberproblemen                                                    \\ \hline   
+40  & 29.11.2022    &  Refactoring, modularerer Aufbau                                                     \\ \hline   
+41  & 30.11.2022    &  Refactoring, modularerer Aufbau                                                     \\ \hline   
+42  & 01.12.2022    &  Refactoring, modularerer Aufbau                                                     \\ \hline   
+43  & 02.12.2022    &  Refactoring, modularerer Aufbau                                                     \\ \hline  
 &               &                                                       \\ \hline  
-44  & 05.12.2022    &                                                       \\ \hline   
-45  & 06.12.2022    &                                                       \\ \hline   
-46  & 07.12.2022    &                                                       \\ \hline 
-47  & 08.12.2022    &                                                       \\ \hline 
-48  & 09.12.2022    &                                                       \\ \hline 
+44  & 05.12.2022    &  Anzeige von Text recherchieren                                                     \\ \hline   
+45  & 06.12.2022    &  Einarbeiten in \q{SDL-ttf}                                                 \\ \hline   
+46  & 07.12.2022    &  Brainstorming Session Signalrecorder                 \\ \hline 
+47  & 08.12.2022    &  Finden von Memory Leak --> Absturz im Browser                                                     \\ \hline 
+48  & 09.12.2022    &  Finden von Memory Leak --> Absturz im Browser                                                       \\ \hline 
 &               &                                                       \\ \hline 
-49  & 12.12.2022    &                                                       \\ \hline 
-50  & 13.12.2022    &                                                       \\ \hline 
-51  & 14.12.2022    &                                                       \\ \hline 
-52  & 15.12.2022    &                                                       \\ \hline 
-53  & 16.12.2022    &                                                       \\ \hline 
+49  & 12.12.2022    &  Beheben von Memory Leak                                                     \\ \hline 
+50  & 13.12.2022    &  Darstellen von Retry Daten                                                     \\ \hline 
+51  & 14.12.2022    &  Darstellen von Retry Daten                                                      \\ \hline 
+52  & 15.12.2022    &  Farbengenerierung neu schreiben                                                     \\ \hline 
+53  & 16.12.2022    &  Farbengenerierung neu schreiben, objektorientiert                                                     \\ \hline 
 &               &                                                       \\ \hline 
-54  & 19.12.2022    &                                                       \\ \hline 
-55  & 20.12.2022    &                                                       \\ \hline 
-56  & 21.12.2022    &                                                       \\ \hline 
-57  & 22.12.2022    &                                                       \\ \hline 
-58  & 23.12.2022    &                                                       \\ \hline 
+54  & 19.12.2022    &  Automatisierung Generierung von Showdaten für Temperatur \& CPU Auslastung                                                     \\ \hline 
+55  & 20.12.2022    &  Problem mit Textgenerierung finden                                                     \\ \hline 
+56  & 21.12.2022    &  Problem mit Textgenerierung beheben                                                    \\ \hline 
+57  & 22.12.2022    &  Problem mit Textgenerierung beheben                                                        \\ \hline 
+58  & 23.12.2022    &  Problem mit Textgenerierung beheben                                                        \\ \hline 
 &               &                                                       \\ \hline 
-59  & 27.12.2022    &                                                       \\ \hline 
+59  & 27.12.2022    & Änderung in Datengenerierung, alle Datenpunkte abgdecket                                                      \\ \hline 
 60  & 28.12.2022    &                                                       \\ \hline 
 61  & 29.12.2022    &                                                       \\ \hline 
 62  & 30.12.2022    &                                                       \\ \hline 
@@ -103,23 +103,23 @@
 68  & 10.01.2023    &                                                       \\ \hline 
 69  & 11.01.2023    &  Zwischenstandsbesprechung mit Hausleiter                                                      \\ \hline 
 70  & 12.01.2023    &                                                       \\ \hline 
-71  & 13.01.2023    &                                                       \\ \hline 
+71  & 13.01.2023    &  Bestückung Relaisboxen, Aufbau Dauertestanlage                                                     \\ \hline 
 &               &                                                       \\ \hline 
-72  & 16.01.2023    &                                                       \\ \hline 
-73  & 17.01.2023    &                                                       \\ \hline 
-74  & 18.01.2023    &                                                       \\ \hline 
-75  & 19.01.2023    &                                                       \\ \hline 
-76  & 20.01.2023    &                                                       \\ \hline
+72  & 16.01.2023    & Krank                                                      \\ \hline 
+73  & 17.01.2023    & Krank                                                      \\ \hline 
+74  & 18.01.2023    & Aufbau Dauertestanlage                                                      \\ \hline 
+75  & 19.01.2023    & Aufbau Dauertestanlage                                                        \\ \hline 
+76  & 20.01.2023    & Aufbau Dauertestanlage                                                       \\ \hline
 &               &                                                       \\ \hline  
 77  & 23.01.2023    &                                                       \\ \hline 
-78  & 24.01.2023    &                                                       \\ \hline 
-79  & 25.01.2023    &                                                       \\ \hline 
-80  & 26.01.2023    &                                                       \\ \hline 
-81  & 27.01.2023    &                                                       \\ \hline
+78  & 24.01.2023    &  Testeinrichtung an Amaribox                                                     \\ \hline 
+79  & 25.01.2023    &  Einrichten von Einplatiniencomputer für Testzwecke Dauertestanlage                                                      \\ \hline 
+80  & 26.01.2023    &  Bughunting \q{spezielles} Mobilfunknetz                                                     \\ \hline 
+81  & 27.01.2023    &  Abschaltung aller Geräte, Sicherheitsprüfung                                                     \\ \hline
 &               &                                                       \\ \hline  
-82  & 30.01.2023    &                                                       \\ \hline 
-83  & 31.01.2023    &                                                       \\ \hline 
-84  & 01.02.2023    &                                                       \\ \hline 
+82  & 30.01.2023    &  Testen mit 5G Core Netz, nicht erfolgreich                                                     \\ \hline 
+83  & 31.01.2023    &                                                         \\ \hline 
+84  & 01.02.2023    &  Testen mit 5G Core Netz,  erfolgreich, Sim Karten bestücken                                                     \\ \hline 
 85  & 02.02.2023    &                                                       \\ \hline 
 86  & 03.02.2023    &                                                       \\ \hline
 &               &                                                       \\ \hline  
@@ -136,10 +136,10 @@
 96  & 17.02.2023    &                                                       \\ \hline
 &               &                                                       \\ \hline  
 97  & 20.02.2023    &                                                       \\ \hline 
-98  & 21.02.2023    &                                                       \\ \hline 
+98  & 21.02.2023    &  Code Review 1                                        \\ \hline 
 99  & 22.02.2023    &                                                       \\ \hline 
 100 & 23.02.2023    &                                                       \\ \hline 
-101 & 24.02.2023    &                                                       \\ \hline
+101 & 24.02.2023    &  Code Review 2                                    \\ \hline
 &               &                                                       \\ \hline  
 102 & 27.02.2023    &                                                       \\ \hline 
 103 & 28.02.2023    &                                                       \\ \hline 
@@ -168,7 +168,7 @@
 122 & 27.03.2023    &                                                       \\ \hline
 123 & 28.03.2023    &                                                       \\ \hline
 124 & 29.03.2023    &  GPS Data Sanitatation Tool erstellt                                                  \\ \hline
-125 & 30.03.2023    &                                                       \\ \hline
+125 & 30.03.2023    &  E-Sim gerät \q{ausgetauscht}, GPS Tool                                                    \\ \hline
 126 & 31.03.2023    &                                                       \\ \hline
 
 
