--- a/03_Das_Projekt.tex
+++ b/03_Das_Projekt.tex
@@ -62,6 +62,7 @@ Emscripten hat viele Anwendungsfälle, einschließlich der Erstellung von perfor
 Insgesamt ist Emscripten ein leistungsstarkes Werkzeug, das Entwicklern die Möglichkeit gibt, vorhandenen Code in das Web zu bringen und die Vorteile von WebAssembly zu nutzen, um performante Anwendungen im Browser auszuführen. Mit seiner flexiblen Ausgabeformatierung, seiner umfangreichen Bibliotheksunterstützung und seiner Unterstützung für Assembler-Code ist Emscripten eine wertvolle Ergänzung für jedes Entwicklungsprojekt, das darauf abzielt, performante Anwendungen im Web zu erstellen. \\
 
 \subsubsection{Tooling : Bibliothek : SDL}
+\cite*{sdlwebsite}
 \subsection{Durchführung}
 \subsubsection{Aufbau des Buildsystems}
 \paragraph*{Buildsystem in Windows}
