--- a/07_Kalender.tex
+++ b/07_Kalender.tex
@@ -83,7 +83,7 @@
 52  & 15.12.2022    &  Farbengenerierung neu schreiben                                                     \\ \hline 
 53  & 16.12.2022    &  Farbengenerierung neu schreiben, objektorientiert                                                     \\ \hline 
 &               &                                                       \\ \hline 
-54  & 19.12.2022    &  Automatisierung Generierung von Showdaten für Temperatur \& CPU Auslastung                                                     \\ \hline 
+54  & 19.12.2022    &  Automatisierung Generierung von Showdaten                                                    \\ \hline 
 55  & 20.12.2022    &  Problem mit Textgenerierung finden                                                     \\ \hline 
 56  & 21.12.2022    &  Problem mit Textgenerierung beheben                                                    \\ \hline 
 57  & 22.12.2022    &  Problem mit Textgenerierung beheben                                                        \\ \hline 
@@ -169,7 +169,7 @@
 123 & 28.03.2023    &                                                       \\ \hline
 124 & 29.03.2023    &  GPS Data Sanitatation Tool erstellt                                                  \\ \hline
 125 & 30.03.2023    &  E-Sim gerät \q{ausgetauscht}, GPS Tool                                                    \\ \hline
-126 & 31.03.2023    &                                                       \\ \hline
+126 & 31.03.2023    &  Praxissemesterbericht                                                    \\ \hline
 
 
 
