--- a/bibliography.bib
+++ b/bibliography.bib
@@ -40,3 +40,23 @@
     url       = "https://www.libsdl.org/",
     keywords  = "SDL"
 }
+
+@online{emscriptenwebsite,
+    author    = "Emscripten Authors",
+    title     = "Emscripten",
+    url       = "https://www.emscripten.org//",
+    keywords  = "Emscripten"
+}
+@online{emscriptendownload,
+    author    = "Emscripten Authors",
+    title     = "Emscripten Install and Download",
+    url       = "https://emscripten.org/docs/getting_started/downloads.html",
+    keywords  = "Emscripten, Download"
+}
+@online{caniusewasm,
+    author    = "Alexis Deveria",
+    title     = "Can I Use - WASM",
+    url       = "https://caniuse.com/wasm",
+    keywords  = "Can I Use?"
+}
+
