--- a/00_main.tex
+++ b/00_main.tex
@@ -45,7 +45,7 @@
 %----------------------------------------------------------------------------------------
 %	TITLE PAGE
 %----------------------------------------------------------------------------------------
-\createTikZTitlePage{Elektro- und \\ Informationstechnik}   {{\huge\textbf{Fach}}{\\Skript, Stand \today)}}   {NAME}
+\createTikZTitlePage{Elektro- und \\ Informationstechnik}   {{\huge\textbf{Praxissemester Siemens AG}}{\\Praxissemesterbericht - Firmwareentwicklung WLAN und Mobilfunk}}   {Florian Ittensohn, Matrikelnummer 66817}
 
 %----------------------------------------------------------------------------------------
 %	COPYRIGHT PAGE
@@ -78,7 +78,15 @@
 
 \pagestyle{empty} % Disable headers and footers for the following pages
 
+\includepdf[pages={1}]{Sperrvermerk.pdf}
+
 \tableofcontents % Print the table of contents itself
+
+\cleardoublepage
+\addcontentsline{toc}{section}{\listfigurename}\listoffigures
+
+\cleardoublepage
+\addcontentsline{toc}{section}{\listtablename}\listoftables
 
 % \cleardoublepage % Forces the first chapter to start on an odd page so it's on the right side of the book
 
@@ -87,7 +95,7 @@
 
 %----------------------------------------------------------------------------------------
 %  Teil 1
-\part{TEIL 1}
+\part{Praxissemesterbericht - Firmwareentwicklung Siemens AG}
 %----------------------------------------------------------------------------------------
 
 \input{01_einleitung.tex} 
@@ -327,17 +335,19 @@ Referencing Figure \ref{fig:placeholder} in-text automatically.
 
 %------------------------------------------------
 
-\section*{Articles}
+\section*{Artikel}
 \addcontentsline{toc}{section}{Articles}
 \printbibliography[heading=bibempty,type=article]
-\printbibliography
 
 %------------------------------------------------
 
-\section*{Books}
+\section*{Bücher}
 \addcontentsline{toc}{section}{Books}
 \printbibliography[heading=bibempty,type=book]
 
+\section*{Webseiten}
+\addcontentsline{toc}{section}{Online}
+\printbibliography[heading=bibempty,type=online]
 %----------------------------------------------------------------------------------------
 %	INDEX
 %----------------------------------------------------------------------------------------
