--- a/customcommands.tex
+++ b/customcommands.tex
@@ -72,7 +72,7 @@
 	%%% Background Picture %%%
 		\node[above, inner sep=0pt] (Hinterlegbild) at (BackgroundPic)
 		% upper picture boundary needs to be at 3/5 of Page, which is 17.82cm. It starts 3cm from bottom so: 14.82cm
-		{\includegraphics[height=14.82cm]{../Pictures/csm_HKA_Image_2017_EIT_9006_92a30c9926.jpg}}; 
+		{\includegraphics[height=14.82cm]{../Pictures/MUM_IP65_IP30.png}}; 
 		
 	%%% Colored, 3cm high, Box under Picture %%%
 		\path[fill=ThemeColor] (current page.south west) rectangle ($ (current page.south east) + (0,3) $);
